# coding-agents-databricks-apps

./: .gitignore  README.md  app.py  app.yaml  app.yaml.template  gunicorn.conf.py  pyproject.toml  requirements.txt  setup_claude.py  setup_codex.py  setup_databricks.py  setup_gemini.py  setup_mlflow.py  setup_opencode.py  sync_to_workspace.py  utils.py
.github/workflows/: dependency-audit.yml  release.yml
docs/: deployment.md
spawner/: Makefile  app.py  app.yaml  pyproject.toml
spawner/static/: index.html
static/: index.html  loading.html  poll-worker.js
tests/: test_heartbeat.py  test_mlflow_tracing.py
